# Predicting-Nba

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  migrate_to_r2.py  mlp_classifier.skops  model.npz  prediction_model.skops  pyproject.toml  requirements.txt  scaler.skops  setup.py  setup_project.py  start.sh
.claude/: settings.local.json
.github/workflows/: deploy.yml
src/backend/: main.py
src/backend/routes/: predict.py  update.py
src/features/: DailyPredictor.py  DataCollector.py  daily_predictor.py  data_clean.py  data_collect.py  make_prediction.py  model_predictor.py  model_train.py
src/nn/: __init__.py  activations.py  losses.py  metrics.py  model.py  saving.py
src/predict_nba/automation/: __init__.py  automation_runner.py  daily_generate.py  daily_update.py  espn_utils.py  history_manager.py  predictor_runner.py
src/predict_nba/backend/: main.py
src/predict_nba/backend/routes/: predict.py  update.py
src/predict_nba/features/: daily_predictor.py  data_cleaner.py  data_collector.py  make_prediction.py  model_predictor.py  model_trainer.py
src/predict_nba/pipeline/: bootstrap_model.py  daily_predictor.py  data_cleaner.py  data_collector.py  make_prediction.py  model_predictor.py  model_trainer.py
src/predict_nba/utils/: exception.py  logger.py  oddsfetcher.py  s3_client.py  wait_for_model.py
src/utils/: exception.py  logger.py
