[project]
name = "predict-nba"
version = "0.1.0"
description = "NBA prediction project using ML + S3 + FastAPI"
authors = [
    { name="Markus", email="muilu.markus@gmail.com" }
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]
